fix mobile overflows

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -5,6 +5,7 @@
 .exp img{
     height: 75px;
     width: 100px;
+    max-width: 100%;
     margin: 5px;
     object-fit: contain;
 }
