--- a/_sass/external-home.scss
+++ b/_sass/external-home.scss
@@ -1,4 +1,3 @@
-
 .external{
     display: inline-flex;
     width: 100%;
@@ -18,6 +17,7 @@
 }
 
 .external .item{
+    max-width: 400px;
     display: inline-flex;
     flex-wrap: wrap;
     margin: 25px;
@@ -30,7 +30,7 @@
 
 .external .item img{
     height: 250px;
-    max-width: min(calc(100vw - 40px), 400px);
+    max-width: min(100%, 400px);
     object-fit: contain;
     transition: transform .5s ease;
 }
@@ -60,6 +60,7 @@
 
 .external .more{
     margin-top: 50px;
+    margin-right: 25px;
     margin-left: auto;
     padding: 10px;
     display: inline-flex;
