--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -54,10 +54,10 @@ th{
     }
 
     .post img, .post .desc{
-        width: calc(100vw - 100px);
+        width: calc(100vw - 60px);
     }
 
     .post img{
-        height: calc(62.5vw - 100px);
+        height: calc(62.5vw - 60px);
     }
 }
